feat(create): 创建国际化和暗黑模式

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -6,6 +6,19 @@
   "menu.me": "Me",
   "menu.manage": "Manage",
 
+  "knowledge.root": "Root",
+  "knowledge.folder": "Folder",
+  "knowledge.file": "File",
+  "knowledge.add": "Add",
+  "knowledge.empty": "No files yet, go and create one!",
+  "knowledge.save": "Save",
+  "knowledge.edit": "Edit",
+  "knowledge.move": "Move",
+  "knowledge.export": "Export",
+  "knowledge.delete": "Delete",
+  "knowledge.empty_son": "No more subdirectories, just put them here!",
+  "knowledge.name": " name",
+
   "me.role": "role",
   "me.my": "my",
   "me.like": "like",
