--- a/src/i18n/zh-CN.json
+++ b/src/i18n/zh-CN.json
@@ -6,6 +6,34 @@
   "menu.me": "我",
   "menu.manage": "权限管理",
 
+  "knowledge.root": "根目录",
+  "knowledge.folder": "文件夹",
+  "knowledge.file": "知识库",
+  "knowledge.add": "新建",
+  "knowledge.empty": "还没有文件，快去创建一个吧！",
+  "knowledge.save": "保存",
+  "knowledge.edit": "编 辑",
+  "knowledge.move": "移 动",
+  "knowledge.export": "导 出",
+  "knowledge.delete": "删 除",
+  "knowledge.empty_son": "没有子目录了，就放这里吧！",
+  "knowledge.name": "名称",
+  "knowledge.move_here": "移动到此处",
+
+  "create.prompt": "提示词",
+  "create.prompt_title": "与AI对话时，提供的指导性文本，它能帮助我们更好的进行交互。",
+  "create.prompt_placeholder": "我想让你扮演一个小说家。您将想出富有创意且引人入胜的故事，可以长期吸引读者。你可以选择任何类型，如奇幻、浪漫、历史小说等——但你的目标是写出具有出色情节、引人入胜的人物和意想不到的高潮的作品。我的第一个要求是“我要写一部以未来为背景的科幻小说",
+  "create.prompt_guess": "猜你想说 . . .",
+  "create.prompt_auxiliary": "在上方提示词框中输入任意内容，即可让AI辅助生成提示词",
+  "create.base_info": "基础配置",
+  "create.role_avatar": "角色头像",
+  "create.role_name": "角色名称",
+  "create.role_name_placeholder": "请输入角色名称",
+  "create.role_introduce": "角色介绍",
+  "create.role_introduce_placeholder": "描述一下角色主要功能",
+  "create.Advanced": "高级功能",
+  "create.Advanced_explain": "通过自定义AI模型，可以创建出更强大的角色。",
+
   "me.role": "角色",
   "me.my": "我的",
   "me.like": "赞过",
