feat(preview): 国际化

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -18,6 +18,35 @@
   "knowledge.delete": "Delete",
   "knowledge.empty_son": "No more subdirectories, just put them here!",
   "knowledge.name": " name",
+  "knowledge.move_here": "Move Here",
+
+  "create.prompt": "Prompt",
+  "create.prompt_title": "Providing Prompt, AI can help us interact better.",
+  "create.prompt_placeholder": "I want you to play the role of a novelist. You will come up with creative and engaging stories that can attract readers in the long run. You can choose any type, such as fantasy, romance, historical novels, etc. - but your goal is to write works with excellent plots, captivating characters, and unexpected climaxes. My first requirement is to write a science fiction novel set in the future.",
+  "create.prompt_guess": "Maybe you want to say . . .",
+  "create.prompt_auxiliary": "Enter any content in the prompt word box above to have AI assist in generating prompt words",
+  "create.base_info": "Base Info",
+  "create.role_avatar": "Avatar",
+  "create.role_name": "Name",
+  "create.role_name_placeholder": "Please enter the role name",
+  "create.role_introduce": "Introduction",
+  "create.role_introduce_placeholder": "Describe the role functions",
+  "create.Advanced": "Advanced",
+  "create.Advanced_explain": "By customizing AI models, more powerful characters can be created.",
+  "create.divergence": "Temperature",
+  "create.divergence_explain": "Temperature represents the degree of AI thinking divergence, and the larger the value, the more diverse the generated text.",
+  "create.model": "Model",
+  "create.model_explain": "After selecting the model, you can debug it in the preview window, as different models have different capabilities.",
+  "create.knowledge_train": "Is knowledge base training enabled",
+  "create.knowledge_train_explain": "After closing the knowledge base, the content in the knowledge base cannot be used.",
+  "create.knowledge_on": "ON",
+  "create.knowledge_off": "OFF",
+  "create.knowledge": "Knowledge",
+  "create.knowledge_explain": "The knowledge base is the auxiliary brain of AI, and through learning from the knowledge base, the ability and accuracy of characters can be improved.",
+  "create.Presets": "Presets",
+  "create.Presets_explain": "Uploading conversation records and helping AI correct responses can enable AI to reflect on themselves and train more intelligent and stable character models.",
+  "create.Presets_custom": "Custom",
+  "create.Presets_create": "Create",
 
   "me.role": "role",
   "me.my": "my",
