--- a/src/i18n/zh-CN.json
+++ b/src/i18n/zh-CN.json
@@ -33,6 +33,20 @@
   "create.role_introduce_placeholder": "描述一下角色主要功能",
   "create.Advanced": "高级功能",
   "create.Advanced_explain": "通过自定义AI模型，可以创建出更强大的角色。",
+  "create.divergence": "发散能力",
+  "create.divergence_explain": "发散能力代表AI思维发散程度，数值越大，生成的文本越多样。",
+  "create.model": "使用模型",
+  "create.model_explain": "选中模型后，可在预览窗口进行调试，不同的模型具有不同的能力。",
+  "create.knowledge_train": "是否开启知识库训练",
+  "create.knowledge_train_explain": "关闭知识库后，将无法使用知识库中的内容。",
+  "create.knowledge_on": "开启",
+  "create.knowledge_off": "关闭",
+  "create.knowledge": "知识库",
+  "create.knowledge_explain": "知识库是AI的辅助大脑，通过知识库的学习，可以提高角色的能力、准确性。",
+  "create.Presets": "预设对话",
+  "create.Presets_explain": "上传对话记录，并帮助AI修正回复，能够让AI自我反省，从而训练出更智能、更稳定的角色模型。",
+  "create.Presets_custom": "自定义",
+  "create.Presets_create": "创建角色",
 
   "me.role": "角色",
   "me.my": "我的",
